--- a/package.json
+++ b/package.json
@@ -13,20 +13,19 @@
     "medusa"
   ],
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && npm run build:server && npm run build:admin",
-    "build:server": "npm run clean && tsc -p tsconfig.server.json",
-    "build:admin": "medusa-admin build",
-    "watch": "tsc --watch",
-    "test": "jest",
-    "seed": "medusa seed -f ./data/seed.json",
-    "start": "medusa start",
-    "start:azure": "medusa migrations run && medusa start",
-    "dev": "npm run build:server && medusa develop"
+  "clean": "./node_modules/.bin/rimraf dist",
+  "build": "npm run clean && npm run build:server && npm run build:admin",
+  "build:server": "npm run clean && tsc -p tsconfig.server.json",
+  "build:admin": "medusa-admin build",
+  "watch": "tsc --watch",
+  "test": "jest",
+  "seed": "medusa seed -f ./data/seed.json",
+  "start": "npm run build && medusa start",
+  "start:custom": "npm run build && node --preserve-symlinks --trace-warnings index.js",
+  "dev": "npm run build:server && medusa develop"
   },
   "dependencies": {
     "@medusajs/admin": "^7.1.16",
-    "cross-env": "^7.0.3",
     "@medusajs/cache-inmemory": "1.8.11",
     "@medusajs/cache-redis": "^1.9.2",
     "@medusajs/event-bus-local": "1.9.9",
@@ -56,6 +55,7 @@
     "@types/mime": "1.3.5",
     "@types/node": "^17.0.8",
     "babel-preset-medusa-package": "^1.1.19",
+    "cross-env": "^7.0.3",
     "eslint": "^6.8.0",
     "jest": "^27.3.1",
     "rimraf": "^3.0.2",
@@ -63,12 +63,34 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
   },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.spec.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/node_modules/"
+    ],
+    "rootDir": "src",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
+    "transform": {
+      ".ts": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node"
+  },
   "resolutions": {
     "glob": "^7.1.6"
-  },
-  "engines": {
-    "node": ">=16 <21",
-    "npm": ">=7"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
