--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "medusa"
   ],
   "scripts": {
-  "clean": "./node_modules/.bin/rimraf dist",
-  "build": "npm run clean && npm run build:server && npm run build:admin",
-  "build:server": "npm run clean && tsc -p tsconfig.server.json",
-  "build:admin": "medusa-admin build",
-  "watch": "tsc --watch",
-  "test": "jest",
-  "seed": "medusa seed -f ./data/seed.json",
-  "start": "npm run build && medusa start",
-  "start:custom": "npm run build && node --preserve-symlinks --trace-warnings index.js",
-  "dev": "npm run build:server && medusa develop"
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run build:server && npm run build:admin",
+    "build:server": "tsc -p tsconfig.server.json",
+    "build:admin": "medusa-admin build",
+    "watch": "tsc --watch",
+    "test": "jest",
+    "seed": "medusa seed -f ./data/seed.json",
+    "start": "npm run build && medusa start",
+    "start:custom": "npm run build && node --preserve-symlinks --trace-warnings index.js",
+    "dev": "npm run build:server && medusa develop"
   },
   "dependencies": {
     "@medusajs/admin": "^7.1.16",
@@ -42,7 +42,8 @@
     "medusa-payment-manual": "1.0.25",
     "medusa-payment-stripe": "6.0.11",
     "prism-react-renderer": "^2.0.4",
-    "typeorm": "0.3.16"
+    "typeorm": "0.3.16",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
@@ -55,10 +56,8 @@
     "@types/mime": "1.3.5",
     "@types/node": "^17.0.8",
     "babel-preset-medusa-package": "^1.1.19",
-    "cross-env": "^7.0.3",
     "eslint": "^6.8.0",
     "jest": "^27.3.1",
-    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
@@ -91,6 +90,10 @@
   },
   "resolutions": {
     "glob": "^7.1.6"
+  },
+  "engines": {
+    "node": ">=16 <19",
+    "npm": ">=7"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
