--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "medusa"
   ],
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "npx rimraf dist",
     "build": "npm run clean && npm run build:server && npm run build:admin",
     "build:server": "tsc -p tsconfig.server.json",
     "build:admin": "medusa-admin build",
